cfn/security_groups.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Security Groups for Chatbot Arena Infrastructure

Parameters:
  VPCID:
    Type: AWS::EC2::VPC::Id
    Description: The ID of the VPC

Resources:
  ### Security Group ###
  ControllerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "controller-sg-${AWS::StackName}"
      GroupDescription: Allow traffic for Controller
      VpcId: !Ref VPCID

  ModelWorkerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "model-worker-sg-${AWS::StackName}"
      GroupDescription: Allow traffic for Model Workers
      VpcId: !Ref VPCID

  GradioSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "gradio-sg-${AWS::StackName}"
      GroupDescription: Allow traffic for Gradio
      VpcId: !Ref VPCID

  BastionSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "bastion-sg-${AWS::StackName}"
      GroupDescription: Allow traffic for Bastion
      VpcId: !Ref VPCID

  ### Ingress Rules ###
  # Internet -> Gradio
  GradioIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref GradioSG
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
      CidrIp: 0.0.0.0/0

  # Gradio -> Controller
  GradioToController:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ControllerSG
      IpProtocol: tcp
      FromPort: 3000
      ToPort: 3000
      SourceSecurityGroupId: !Ref GradioSG

  # Controller -> Model Worker
  # Allow a range of ports for running multiple models on a single instance
  ControllerToModelWorker:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ModelWorkerSG
      IpProtocol: tcp
      FromPort: 3001
      ToPort: 3999
      SourceSecurityGroupId: !Ref ControllerSG

  # Model Worker -> Controller
  ModelWorkerToController:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ControllerSG
      IpProtocol: tcp
      FromPort: 3000
      ToPort: 3000
      SourceSecurityGroupId: !Ref ModelWorkerSG

  # Internet -> Bastion
  BastionIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref BastionSG
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0

  # Bastion -> Controller
  BastionToController:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ControllerSG
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      SourceSecurityGroupId: !Ref BastionSG

  # Bastion -> Model Worker
  BastionToModelWorker:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ModelWorkerSG
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      SourceSecurityGroupId: !Ref BastionSG

  # Bastion -> Gradio
  BastionToGradio:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref GradioSG
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      SourceSecurityGroupId: !Ref BastionSG

Outputs:
  ControllerSGID:
    Description: Security Group ID for Controller
    Value: !Ref ControllerSG
  ModelWorkerSGID:
    Description: Security Group ID for Model Workers
    Value: !Ref ModelWorkerSG
  GradioSGID:
    Description: Security Group ID for Gradio
    Value: !Ref GradioSG
  BastionSGID:
    Description: Security Group ID for Bastion
    Value: !Ref BastionSG
